--- a/package.json
+++ b/package.json
@@ -23,13 +23,15 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
-    "@ng-bootstrap/ng-bootstrap":"^2.0.0",
+    "ng2-typeahead": "1.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^2.0.0",
     "axios": "^0.18.0",
     "body-parser": "^1.18.2",
     "bootstrap": "^4.0.0",
     "core-js": "^2.4.1",
     "express": "^4.16.2",
     "jquery": "^3.3.1",
+    "ng2-bootstrap-typeahead": "^2.0.4",
     "ngx-facebook": "^2.4.0",
     "popper.js": "^1.12.9",
     "rxjs": "^5.5.6",
